[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/GameProgress.gd" type="Script" id=1]
[ext_resource path="res://ui/MenuShoot.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/ship.png" type="Texture" id=3]
[ext_resource path="res://assets/images/planet.png" type="Texture" id=4]
[ext_resource path="res://ui/ActionNode.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/images/ui/arrow_left.png" type="Texture" id=6]
[ext_resource path="res://assets/images/tini_star.png" type="Texture" id=7]

[node name="GameProgress" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Shoot" parent="." index="0" instance=ExtResource( 2 )]

visible = false
position = Vector2( 240, 464 )

[node name="Ship" type="Sprite" parent="." index="1"]

position = Vector2( 224, 464 )
texture = ExtResource( 3 )

[node name="Luna" type="Sprite" parent="." index="2"]

position = Vector2( 304, 64 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Tierra" type="Sprite" parent="." index="3"]

position = Vector2( 224, 160 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Tierra2" type="Sprite" parent="." index="4"]

position = Vector2( 528, 336 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Tierra3" type="Sprite" parent="." index="5"]

position = Vector2( 816, 64 )
scale = Vector2( 6, 6 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Sol" type="Sprite" parent="." index="6"]

position = Vector2( -16, 528 )
scale = Vector2( 16, 16 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Options" type="Node2D" parent="." index="7"]

[node name="TierraLabel" parent="Options" index="0" instance=ExtResource( 5 )]

position = Vector2( 224, 224 )
action = 0
text = "tierra"

[node name="LunaLabel" parent="Options" index="1" instance=ExtResource( 5 )]

position = Vector2( 336, 128 )
action = 1
text = "luna"

[node name="MarteLabel" parent="Options" index="2" instance=ExtResource( 5 )]

position = Vector2( 528, 384 )
action = 2
text = "marte"

[node name="JupiterLabel" parent="Options" index="3" instance=ExtResource( 5 )]

position = Vector2( 816, 160 )
action = 3
text = "jupiter"

[node name="Back" parent="Options" index="4" instance=ExtResource( 5 )]

position = Vector2( 128, 320 )
action = 4
text = "volver"

[node name="Arrow" type="Sprite" parent="." index="8"]

position = Vector2( 128, 272 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="Lights" type="Node2D" parent="." index="9"]

editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Lights" index="0"]

position = Vector2( 640, 192 )
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="Lights" index="1"]

position = Vector2( 656, 208 )
texture = ExtResource( 7 )

[node name="Sprite3" type="Sprite" parent="Lights" index="2"]

position = Vector2( 656, 192 )
texture = ExtResource( 7 )

[node name="Sprite4" type="Sprite" parent="Lights" index="3"]

position = Vector2( 592, 192 )
texture = ExtResource( 7 )

[node name="Sprite5" type="Sprite" parent="Lights" index="4"]

position = Vector2( 608, 176 )
texture = ExtResource( 7 )

[node name="Sprite6" type="Sprite" parent="Lights" index="5"]

position = Vector2( 592, 176 )
texture = ExtResource( 7 )

[node name="Sprite7" type="Sprite" parent="Lights" index="6"]

position = Vector2( 624, 144 )
texture = ExtResource( 7 )

[node name="Sprite8" type="Sprite" parent="Lights" index="7"]

position = Vector2( 624, 160 )
texture = ExtResource( 7 )

[node name="Sprite9" type="Sprite" parent="Lights" index="8"]

position = Vector2( 592, 144 )
texture = ExtResource( 7 )


